# c-guide

./: .gitignore  CMakeLists.txt  LICENSE  README (1).md  README.md
_drag/: CMakeLists.txt
_drag/src/: main.c
_drag/src/IPC/fifo/: fifo_write.c
_drag/src/IPC/mmap/: 06mmap_map_shared.c  read.c
_drag/src/IPC/pipe/: 01pipe.c  01pipe_nonblock.c
_drag/src/IPC/sharedMemory/read/: memShareRead.c
_drag/src/IPC/singnal/: 09sig_atomic_t.c
_drag/src/IPC/singnal/abort/: 02abort.c
_drag/src/IPC/singnal/pause/: 08sigsuspend.c
_drag/src/IPC/singnal/system/: 06system.c
_drag/src/IPC/singnal/while/: while.c
_drag/src/allocate/calloc/: main.c
_drag/src/allocate/malloc/: malloc1.c
_drag/src/allocate/memset/: memset.c  memset.h
_drag/src/allocate/realloc/: main.c  realloc.c
_drag/src/array/example1/: array.c  array1.h  main.c
_drag/src/array/example2/: array.c  main.c
_drag/src/array/example3/: array.h  main.c
_drag/src/file/example1/: file1.h  main.c  temp_s.txt
_drag/src/for/: main.c
_drag/src/function/example1/: func.h
_drag/src/function/example2/: func.h  main.c
_drag/src/macro/example2/: macro.c
_drag/src/macro/example3/: macro.c
_drag/src/memoryLayout/example1/: main.c  memlayout.c
_drag/src/multiprocess/example1/: server.c  server.h
_drag/src/multiprocess/example3/: fork.c  main.c
_drag/src/multiprocess/example4/: main.c
_drag/src/mysql/example1/: main.c  mysql1.c  mysql1.h
_drag/src/pointer/example1/: main.c  pointer.c  pointer.h
_drag/src/socket/clientExample/: client.c
_drag/src/socket/epoll/: client.c  server.c
_drag/src/socket/example3/: server.c
_drag/src/socket/select/: server.h
_drag/src/socket/serverExample/: server.c  server.h
_drag/src/socket/unix_domain_socket/: client.c  server.c
_drag/src/static/example1/: static.h
_drag/src/string/example1/: string.h
_drag/src/string/example2/: string.h
_drag/src/struct/bitdomain/example1/: bitdomain.h  main.c
_drag/src/struct/example1/: main.c  struct1.h
_drag/src/struct/example2/: main.c
_drag/src/struct/example3/: main.c
_drag/src/struct/example4/: main.c  struct.c  struct.h
_drag/src/struct/example5/: main.c
_drag/src/thread/example1/: main.c  thread.c  thread.h
_drag/src/thread/example2/: main.c  thread.c  thread.h
_drag/src/thread/example3/: main.c  thread.c  thread.h
_drag/src/thread/example4/: main.c  thread.h
_drag/src/thread/example5/: thread.h
_drag/src/thread/example6/: main.c  thread.c
_drag/src/thread/example7/: thread.h
_drag/src/thread/example8/: thread.c  thread.h
_drag/src/typedef/example1/: typedef.c  typedef.h
_drag/src/typedef/example3/: typedef.c  typedef.h
_drag/src/typedef/example4/: typedef.h
_drag/src/typedef/example5/: typedef.h
_drag/src/union/example1/: main.c
_drag/src/union/example2/: union.c  union.h
_drag/src/util/enum/: enum1.h
_drag/src/util/getchar/: getchar.c
_drag/src/util/rand/: rand.c  rand.h
_drag/src/util/sizeof/: distribution.c
_drag/src/util/time/: main.c  time.c  time.h
_drag/src/variable/example1/: main.c
algorithm/linked/: testlink.c  testlink.h
foundation/: CMakeLists.txt
foundation/foundation/: CMakeLists.txt  foundation.c  foundation.h
foundation/t_array/: t_array_for.c  t_array_initialize.c  t_array_length.c  t_array_two_dimensional.c
foundation/t_char/: t_char_arr.c  t_char_arr_copy.c  t_char_arr_initialize.c  t_char_arr_sub.c  t_char_pointer_copy.c  t_char_pointer_initialize.c
src/IPC/: README.md
src/IPC/fifo/: fifo_read.c
src/IPC/mmap/: 06mmap_map_private.c  write.c
src/IPC/mq/: msgq.c
src/IPC/pipe/: 02pipe_buffer_max.c
src/IPC/semophore/: semophore.c
src/IPC/sharedMemory/write/: memShareWrite.c
src/IPC/singnal/alarm/: 02alarm.c
src/IPC/singnal/kill/: 02kill.c
src/IPC/singnal/pause/: 08pause.c
src/IPC/singnal/raise/: 02raise.c
src/allocate/calloc/: calloc.c  calloc.h
src/allocate/malloc/: main.c  malloc1.h
src/allocate/memset/: main.c
src/allocate/realloc/: realloc.h
src/array/example2/: array.h
src/array/example3/: array.c
src/char/example1/: char1.c  char1.h  main.c
src/file/example1/: file1.c
src/function/example1/: func.c  main.c
src/function/example2/: func.c
src/macro/example1/: macro.c  macro.h  main.c
src/macro/example2/: macro.h  main.c
src/macro/example3/: macro.h  main.c
src/memoryLayout/example1/: memlayout.h
src/multiprocess/example3/: fork.h
src/multiprocess/example4/: zoombie.c  zoombie.h
src/operation/example1/: main.c  operation.c  operation.h
src/socket/example3/: server.h
src/socket/select/: server.c
src/socket/splice/: splice.c  splice.h
src/static/example1/: static.c
src/string/example1/: main.c  string.c
src/string/example2/: main.c  string.c
src/struct/bitdomain/example1/: bitdomain.c
src/struct/example1/: struct.c
src/struct/example2/: struct.c  struct.h
src/struct/example3/: struct.c  struct.h
src/struct/example5/: struct.c  struct.h
src/thread/example4/: thread.c
src/thread/example5/: main.c  thread.c
src/thread/example6/: thread.h
src/thread/example7/: main.c  thread.c
src/thread/example8/: main.c
src/typedef/example1/: main.c
src/typedef/example2/: main.c  typedef.c  typedef.h
src/typedef/example3/: main.c
src/typedef/example4/: main.c  typedef.c
src/typedef/example5/: main.c  typedef.c
src/union/example1/: union1.c  union1.h
src/union/example2/: main.c
src/util/const/example1/: const.c  const.h  main.c
src/util/enum/: enum1.c
src/util/getchar/: getchar.h
src/util/rand/: main.c
src/util/sizeof/: distribution.h
src/variable/example1/: variable1.c  variable1.h
