cmake_minimum_required(VERSION 3.20)
project(myc C)

set(CMAKE_C_STANDARD 11)

set(INC_DIR /Users/xulei/jungle/cworkspace/mylib/mysql/c/mysql-8.0.28/include)
include_directories(${INC_DIR})
set(LINK_DIR /Users/xulei/jungle/cworkspace/mylib/mysql/c/mysql-8.0.28/lib)
link_directories(${LINK_DIR})


#add_definitions("-save-temps")

add_executable (1 src/struct/example1/main.c src/struct/example1/struct.c src/struct/example1/struct1.h)
add_executable (2 src/char/example1/main.c src/char/example1/char1.c src/char/example1/char1.h)
add_executable (3 src/array/example1/main.c src/array/example1/array.c src/array/example1/array1.h)
add_executable (4 src/mysql/example1/main.c src/mysql/example1/mysql1.c src/mysql/example1/mysql1.h)
target_link_libraries(4 libmysqlclient.dylib)
add_executable(5 src/variable/example1/main.c src/variable/example1/variable1.c src/variable/example1/variable1.h)
add_executable(6 src/string/example1/main.c src/string/example1/string.c src/string/example1/string.h)
add_executable(7 src/util/const/example1/main.c src/util/const/example1/const.c src/util/const/example1/const.h)
add_executable(8 src/allocate/malloc/main.c src/allocate/malloc/malloc1.c src/allocate/malloc/malloc1.h)
add_executable(9 src/allocate/calloc/main.c src/allocate/calloc/calloc.c src/allocate/calloc/calloc.h)
add_executable(10 src/allocate/realloc/main.c src/allocate/realloc/realloc.c src/allocate/realloc/realloc.h)
add_executable(11 src/allocate/memset/main.c src/allocate/memset/memset.c src/allocate/memset/memset.h)
add_executable(12 src/union/example2/main.c src/union/example2/union.c src/union/example2/union.h)
add_executable(13 src/macro/example1/main.c src/macro/example1/macro.c src/macro/example1/macro.h)
add_executable(14 src/macro/example2/main.c src/macro/example2/macro.c src/macro/example2/macro.h)
add_executable(15 src/function/example1/main.c src/function/example1/func.c src/function/example1/func.h)
add_executable(16 src/operation/example1/main.c src/operation/example1/operation.c src/operation/example1/operation.h)
add_executable(17 src/util/rand/main.c src/util/rand/rand.c src/util/rand/rand.h)
add_executable(18 src/file/example1/main.c src/file/example1/file1.c src/file/example1/file1.h)
add_executable(19 src/array/example2/main.c src/array/example2/array.c src/array/example2/array.h)
add_executable(20 src/array/example3/main.c src/array/example3/array.c src/array/example3/array.h)
add_executable(21 src/function/example2/main.c src/function/example2/func.c src/function/example2/func.h)
add_executable(22 src/typedef/example1/main.c src/typedef/example1/typedef.c src/typedef/example1/typedef.h)
add_executable(23 src/typedef/example2/main.c src/typedef/example2/typedef.c src/typedef/example2/typedef.h)
add_executable(24 src/struct/example2/main.c src/struct/example2/struct.c src/struct/example2/struct.h)
add_executable(25 src/struct/example3/main.c src/struct/example3/struct.c src/struct/example3/struct.h)
add_executable(26 src/struct/example4/main.c src/struct/example4/struct.c src/struct/example4/struct.h)
add_executable(27 src/struct/example5/main.c src/struct/example5/struct.c src/struct/example5/struct.h)
add_executable(28 src/main.c)
add_executable(29 src/string/example2/main.c src/string/example2/string.c src/string/example2/string.h)
add_executable(30 src/pointer/example1/main.c src/pointer/example1/pointer.c src/pointer/example1/pointer.h)
add_executable(31 src/typedef/example3/main.c src/typedef/example3/typedef.c src/typedef/example3/typedef.h)
add_executable(32 src/typedef/example4/main.c src/typedef/example4/typedef.c src/typedef/example4/typedef.h)
add_executable(33 src/typedef/example5/main.c src/typedef/example5/typedef.c src/typedef/example5/typedef.h)
add_executable(34 src/util/time/main.c src/util/time/time.c src/util/time/time.h)
add_executable(35 src/socket/clientExample/client.c src/socket/clientExample/client.h)
add_executable(36 src/multiprocess/example3/main.c src/multiprocess/example3/fork.c src/multiprocess/example3/fork.h)
add_executable(37 src/thread/example1/main.c src/thread/example1/thread.c src/thread/example1/thread.h)
add_executable(38 src/thread/example2/main.c src/thread/example2/thread.c src/thread/example2/thread.h)
add_executable(39 src/thread/example3/main.c src/thread/example3/thread.c src/thread/example3/thread.h)
add_executable(40 src/thread/example4/main.c src/thread/example4/thread.c src/thread/example4/thread.h)
add_executable(41 src/thread/example5/main.c src/thread/example5/thread.c src/thread/example5/thread.h)
add_executable(42 src/thread/example6/main.c src/thread/example6/thread.c src/thread/example6/thread.h)
add_executable(43 src/thread/example7/main.c src/thread/example7/thread.c src/thread/example7/thread.h)
add_executable(44 src/thread/example8/main.c src/thread/example8/thread.c src/thread/example8/thread.h)
add_executable(45 src/IPC/mmap/read.c)
add_executable(46 src/IPC/mmap/write.c)
add_executable(47 src/socket/example3/server.c src/socket/example3/server.h)
add_executable(48 src/socket/unix_domain_socket/client.c)
add_executable(49 src/socket/unix_domain_socket/server.c)
add_executable(50 src/for/main.c)
add_executable(51 src/socket/serverExample/server.c src/socket/serverExample/server.h)
add_executable(52 src/socket/select/server.c src/socket/select/server.h)
add_executable(53 src/IPC/sharedMemory/read/memShareRead.c)
add_executable(54 src/IPC/sharedMemory/write/memShareWrite.c)
add_executable(55 src/IPC/fifo/fifo_read.c)
add_executable(56 src/IPC/fifo/fifo_write.c)

#file (GLOB files *.c */*.c */*/*.c *.h */*.h */*/*.h)
#foreach (file ${files})
#    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
#    add_executable (${exe} ${file})
#    message (\ \ \ \ --\ src/${exe}.c\ will\ be\ compiled\ to\ bin/${exe})
#endforeach ()
